<resources>
    <string name="app_name">AOS</string>

    //main activity
    <string name="register">Register</string>
    <string name="login">Login</string>


    <string name="login_Password">Enter Your Password </string>
    <string name="login_email_adress">Enter Your Gmail Account Name</string>
    <string name="login_forget_password">Forget password?</string>
    <string name="login_button">Login</string>

    <string name="prompt_email">Enter phone number or Email</string>
    <string name="prompt_password">Password</string>

    <string name="create_new">Click here to register</string>
    <string name="not_register">Already have an account? Login</string>
    <string name="name">Name</string>
    <string name="phone_number">Phone Number</string>

    <string name="name_error">Please enter your name</string>
    <string name="phone_error">Please enter your phone number</string>
    <string name="email_error">Please enter your email address</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="password_error">Please enter a password</string>
    <string name="error_invalid_password">Please enter a minimum password of 6 characters</string>

    <string name="admin">Admin</string>
    <string name="not_admin">Not Admin</string>
    <string name="reset_password">Reset password</string>
    <string name="remember_password_email">Remember me</string>
    <string name="logout">Log out</string>


</resources>