<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient"
    android:gravity="center"
    android:padding="16dp"
    tools:context=".LoginActivity">

    <RelativeLayout
        android:id="@+id/inside_relative_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="350dp"
            android:layout_marginStart="5dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="5dp"
            android:layout_marginBottom="5dp"
            android:backgroundTint="#402196F3"
            android:backgroundTintMode="src_over"
            android:padding="10dp"
            app:cardCornerRadius="5dp"
            app:cardElevation="5dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="5dp"
                android:orientation="vertical">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/emailError"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp">

                    <EditText
                        android:id="@+id/login_email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:background="@drawable/text_area"
                        android:hint="@string/prompt_email"
                        android:inputType="textEmailAddress"
                        android:maxLines="1"
                        android:paddingStart="5dp"
                        android:singleLine="true" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/passError"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    app:passwordToggleEnabled="true">

                    <EditText
                        android:id="@+id/login_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:background="@drawable/text_area"
                        android:hint="@string/prompt_password"
                        android:inputType="textPassword"
                        android:maxLines="1"
                        android:paddingStart="5dp"
                        android:singleLine="true" />

                </com.google.android.material.textfield.TextInputLayout>

                <Button
                    android:id="@+id/login_button"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_margin="20dp"
                    android:background="@drawable/login_register_btn"
                    android:text="@string/login"
                    android:textColor="@android:color/white"
                    android:textSize="16sp" />

                <com.rey.material.widget.CheckBox
                    android:id="@+id/remember_me_chkbx"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/Material.Drawable.CheckBox"
                    android:textSize="20sp"
                    android:textAlignment="center"
                    android:text="@string/remember_password_email"
                    android:textColor="@color/black"
                    />

                <TextView
                    android:id="@+id/log_register"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:clickable="true"
                    android:focusable="true"
                    android:text="@string/create_new"
                    android:textSize="20sp"
                    android:textColor="@color/purple_500"
                    android:layout_marginLeft="30dp"
                    android:layout_marginRight="20dp"/>

                <TextView
                    android:id="@+id/reset_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:clickable="true"
                    android:focusable="true"
                    android:text="@string/reset_password"
                    android:textSize="20sp"
                    android:textColor="@color/purple_700"
                    android:layout_marginRight="20dp"
                    android:layout_marginLeft="30dp"/>


            </LinearLayout>
        </androidx.cardview.widget.CardView>
        <TextView

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:clickable="true"
            android:contextClickable="true"
            android:focusable="true"
            android:text="@string/admin"
            android:textSize="20sp" />
    </RelativeLayout>

    <ImageView
        android:id="@+id/profile"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="-50dp"
        android:background="@drawable/round_background"
        android:padding="15dp" />


    <TextView
        android:id="@+id/admin_link"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/inside_relative_layout"
        android:layout_marginTop="8dp"
        android:clickable="true"
        android:contextClickable="true"
        android:focusable="true"
        android:text="@string/admin"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/not_admin_link"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/admin_link"
        android:layout_marginTop="8dp"
        android:clickable="true"
        android:contextClickable="true"
        android:focusable="true"
        android:text="@string/not_admin"
        android:textSize="20sp"
        android:visibility="invisible" />

</RelativeLayout>